fix: matching spacing to figma

--- a/sites/public/styles/blocks.scss
+++ b/sites/public/styles/blocks.scss
@@ -32,6 +32,9 @@
   .action-block__icon {
     margin-bottom: var(--bloom-s8);
   }
+  .action-block__subheader {
+    padding-top: var(--bloom-s4);
+  }
 }
 
 .media-grid {
